fix problem with animation popup on mobile screends

--- a/src/components/popup/style.scss
+++ b/src/components/popup/style.scss
@@ -5,9 +5,10 @@
   position: absolute;
   left: -1000px;
   top: -1000px;
-  display: block;
   visibility: hidden;
   transform-origin: top left;
+  width: 630px;
+  transition-timing-function: ease;
 
   @include media("mobile") {
     max-width: 100%;
@@ -18,15 +19,16 @@
 
   &-layout {
     background: rgba(51, 51, 51, 0.5);
+    transition: background 0.3s ease-in;
     width: 100%;
     height: 100%;
     visibility: hidden;
+    overflow: hidden;
     position: fixed;
     top: 0;
     left: 0;
 
     &_state-opened {
-      transition: 0.3s ease-in;
       visibility: visible;
     }
   }
@@ -115,15 +117,6 @@
     .popup-footer {
       display: flex;
     }
-  }
-
-  &_state-open {
-    width: 630px;
-    top: 50%;
-    left: 50%;
-    visibility: visible;
-    transform: translate(-50%, -50%) scaleX(1) scaleY(1);
-    transition: all 0.3s ease;
   }
 }
 
