--- a/src/styles/common.scss
+++ b/src/styles/common.scss
@@ -15,6 +15,11 @@ a {
   text-decoration: none;
 }
 
+html,
+body {
+  height: 100%;
+}
+
 body {
   font-family: Arial;
 }
